<resources>
    <string name="app_name">TinderGram</string>
    <string name="action_settings">Settings</string>
    <string name="login">LOGIN</string>
    <string name="login_to_tindergram">Login to Tindergram</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="title_activity_login_test">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_password">Enter Password</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="already_account"><u>Already have an account? Click here to log in</u></string>
    <string name="tindergram">TinderGram</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="settings">Settings</string>
    <string name="change">Change</string>
    <string name="title_activity_change_username">Change Username</string>
    <string name="new_username">New Username</string>
    <string name="new_email_address">New Email Address</string>
    <string name="title_change_email">Change Email Address</string>
    <string name="new_password">New Password</string>
    <string name="titile_change_password">Change Password</string>

    <string name="follow_user">User to Follow</string>
    <string name="search">Search</string>

    <string name="cancel">Cancel</string>
    <string name="upload">Upload</string>
    <string name="write_comment">Write your comment here…</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="image">Image</string>
    <string name="post">Post</string>

</resources>
