<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_animation">

    <Button
        android:id="@+id/userImage_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/userImage_imageview"
        android:layout_width="362dp"
        android:layout_height="357dp"
        app:layout_constraintBottom_toTopOf="@+id/userImage_post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175"
        app:srcCompat="@drawable/gradient_end"
        android:contentDescription="@string/image" />

    <EditText
        android:id="@+id/userImage_comment"
        android:layout_width="353dp"
        android:layout_height="52dp"
        android:layout_marginBottom="72dp"
        android:hint="@string/enter_comment"
        app:layout_constraintBottom_toTopOf="@+id/userImage_post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="@string/enter_comment"
        android:inputType="textCapSentences" />

</androidx.constraintlayout.widget.ConstraintLayout>