<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="122dp" />

    <TextView
        android:id="@+id/username_title"
        android:layout_width="221dp"
        android:layout_height="29dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:text="@string/username"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/change_user"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11"
        tools:textStyle="bold" />

    <TextView
        android:id="@+id/show_username"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/username"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/username_title"
        app:layout_constraintTop_toBottomOf="@+id/username_title" />

    <TextView
        android:id="@+id/email_title"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/email"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/show_username"
        app:layout_constraintTop_toBottomOf="@+id/show_username"
        tools:textStyle="bold" />

    <TextView
        android:id="@+id/show_email"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/email"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/email_title"
        app:layout_constraintTop_toBottomOf="@+id/email_title" />

    <Button
        android:id="@+id/change_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/change"
        app:layout_constraintEnd_toEndOf="@+id/change_user"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/change_user"
        app:layout_constraintTop_toBottomOf="@+id/change_user" />

    <Button
        android:id="@+id/change_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/change"
        app:layout_constraintEnd_toEndOf="@+id/change_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/change_email"
        app:layout_constraintTop_toBottomOf="@+id/change_email" />

    <TextView
        android:id="@+id/password_title"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/password"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/show_email"
        app:layout_constraintTop_toBottomOf="@+id/show_email"
        tools:textStyle="bold" />

    <Button
        android:id="@+id/change_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:text="@string/change"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059" />

</androidx.constraintlayout.widget.ConstraintLayout>